# robot-common-nav

./: package.xml  setup.cfg  setup.py
launch/: common_rviz.launch.py  test.launch.py  turtlebot3_cartographer.launch  turtlebot3_nav2.launch  turtlebot_gazebo_cartographer.launch.py  turtlebot_world.launch.py
maps/: nerve_218_nav_area.pgm  nerve_218_nav_area.yaml
robot_common_nav/: waypoint_client.py  waypoint_navigator.py
urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
wheel_nav/: README.md  package.xml  setup.cfg  setup.py
wheel_nav/launch/: turtlebot3_cartographer.launch  turtlebot3_gazebo.launch  turtlebot3_nav2.launch  turtlebot_gazebo_cartographer.launch.py
wheel_nav/maps/: 4x4m_four_boxes.pgm  4x4m_four_boxes.yaml  4x4m_shapes_map.pgm  4x4m_shapes_map.yaml
wheel_nav/wheel_nav/: agent.py  clear_local_costmap_state.py  init_global_localization.py  map_comparison.py  navigate_waypoint_state.py  patrol_a_bt.py  reward.py  rl_state.py  rl_step_service.py  set_init_pose.py  simple_nav_bt.py  turtlebot_localization_movement.py  turtlebot_localization_spin.py  waypoint_client.py  waypoint_navigator.py
wheel_nav_msgs/: CMakeLists.txt  package.xml
wheel_nav_msgs/srv/: CompareMaps.srv  Step.srv  Waypoint.srv
